--- a/user.html
+++ b/user.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Stickers</title>
-    <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
   </head>
   <body class="container">
     <header class="page-header">
@@ -11,12 +14,8 @@
       <a class="btn btn-success" href="/">Home</a>
     </header>
     <main>
-      <section class="user">
-
-      </section>
-      <section class="stickers">
-
-      </section>
+      <section class="user"></section>
+      <section class="stickers"></section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
