--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body class="container">
     <header class="page-header">
       <h1>Sticker Mania</h1>
+      <a class="btn btn-warning" href="/login.html">Login</a>
+      <hr />
       <a class="btn btn-primary" href="/user.html?id=1">Berto's Stickers</a>
       <a class="btn btn-danger" href="/user.html?id=2">CJ's Stickers</a>
     </header>
