--- a/logout.html
+++ b/logout.html
@@ -10,14 +10,12 @@
   </head>
   <body class="container">
     <header class="page-header">
-      <h1>Sticker Mania</h1>
-      <a class="btn btn-warning" href="/login.html">Login</a>
-      <a class="btn btn-warning" href="/signup.html">Signup</a>
+      <h1>Logging Out OfSticker Mania</h1>
     </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="./scripts/shared.js"></script>
     <script>
-      redirectIfLoggedIn();
+      logout();
     </script>
   </body>
 </html>
