--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
   <body class="container">
     <header class="page-header">
       <h1>Stickers</h1>
-      <a class="btn btn-success" href="/">Home</a>
+      <a class="btn btn-success" href="/logout.html">Logout</a>
     </header>
     <main>
       <section class="user"></section>
